<resources>
    <string name="app_name">MyJobPitch</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_connection">Connection Error: Please check your internet connection</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="select">Select</string>
    <string name="close">Close</string>
    <string name="continue_">Continue</string>
    <string name="share_using">Share using</string>
    <string name="refresh">Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="remove_message">Are you sure you want to delete %s</string>
    <string name="contact_us">Contact Us</string>
    <string name="success">Success!</string>
    <string name="type_to_search">Type to search</string>
    <string name="email">Email</string>
    <string name="error_upgrade">Your app is out of date, you must upgrade to continue</string>
    <string name="warning_upgrade">Your app is out of date, update now to take advantage of the latest features</string>
    <string name="clase_app">Close app</string>
    <string name="dismiss">Dismiss</string>
    <string name="choose_user_type">Choose User Type</string>
    <string name="get_a_job">Get a Job</string>
    <string name="i_need_staff">I Need Staff</string>
    <string name="reset_passowrd_success">Password reset requested, please check your email.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="register">Register</string>
    <string name="have_account">Have an account? Sign in</string>
    <string name="reset_password">Reset my password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout_message">Are you sure you want to log out?"</string>
    <string name="logout">Log Out</string>
    <string name="my_applications">My Applications</string>
    <string name="new_apppicitons">New Applications</string>
    <string name="my_connections">My Connections</string>
    <string name="my_shortlist">My Shortlist</string>
    <string name="job_profile">Job Profile</string>
    <string name="add_or_edit_jobs">Add or Edit Jobs</string>
    <string name="payment">Payment</string>
    <string name="hr_jobs">HR Jobs</string>
    <string name="hr_employees">HR Employees</string>
    <string name="employees_title">Employees</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="tell_friend">Tell a friend</string>
    <string name="image_capture">Image Capture</string>
    <string name="local_storage">Local Storage</string>
    <string name="google_drive">Google Drive</string>
    <string name="dropbox">Dropbox</string>
    <string name="ready">READY</string>
    <string name="record">RECORD</string>
    <string name="stop">STOP</string>
    <string name="download_message">Do you want to download %s?</string>
    <string name="download">Download</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="google_drive_permission">"This app needs to access your Google account (via Contacts)."</string>
    <string name="google_drive_permission_error">"This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app."</string>
    <string name="accounts">Accounts</string>
    <string name="im_read">I\'m ready</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="js_intro_title0">You\'re just a few steps away from you next job!</string>
    <string name="js_intro_title1">Complete your profile</string>
    <string name="js_intro_title2">Record Your Pitch</string>
    <string name="js_intro_title3">Get hired</string>
    <string name="js_intro_comment0"> </string>
    <string name="js_intro_comment1">It only takes a few seconds but will save you countless hours of searching!</string>
    <string name="js_intro_comment2">Quick and easy! Use your phone camera to record a quick video introduction for yourself.</string>
    <string name="js_intro_comment3">You will be able to apply and recruiters will be able to search and see your profile the moment its complete, what are you waiting for!</string>
    <string name="google_map_message">"Tap on the city or location that you would like to set and tap \"select\" on the upper right corner"</string>
    <string name="got_it">Got it!</string>
    <string name="users_title">Users</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="create_user">Create User</string>
    <string name="administrator">Administrator</string>
    <string name="administrator_current">Administrator (Current User)</string>
    <string name="administrator_message">You must an administrator to view this information.</string>
    <string name="business_user_empty_message">This Business doesn\'t seem to have any user yet!</string>
    <string name="users">users</string>
    <string name="user">user</string>
    <string name="send_inviation">Send Invitation</string>
    <string name="workplace_select_message">You must select at least one workplace.</string>
    <string name="cannt_edit_current_user">Cannot edit currently logged in user.</string>
    <string name="resend_inviation">Resend Invitation</string>
    <string name="delete_user">Delete User</string>
    <string name="add_logo">Add Logo</string>
    <string name="change_logo">Change Logo</string>
    <string name="activate">Activate</string>
    <string name="to_message_account_activate">To message please activate your account</string>
    <string name="to_apply_account_activate">To apply please activate your account</string>
    <string name="to_apply_set_photo">To apply please set your photo</string>
    <string name="job_requires_cv">This job requires your cv</string>
    <string name="not_interested_job">Are you sure you are not interested in this job?</string>
    <string name="im_sure">I\'m Sure</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_isnot_active">Your profile is not active!</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="national_number_help">Supplying your national insurance number makes it easier for employers to recruit you. Your National Insurance number will not be shared with employers.</string>
    <string name="error_video_upload">Error uploading video!</string>
    <string name="cv_help">CV summary is what the recruiter first see, write if you have previous relevant experience where and for how long.</string>
    <string name="cv_add_help">Upload your CV using your favourite cloud service, or take a photo if you have it printed out.</string>
    <string name="cv_added">CV added: save to upload.</string>
    <string name="record_pitch">Rcord Pitch</string>
    <string name="tick_box_message">You must check the box confirming the truth of the information you have provided.</string>
    <string name="record_new_pitch">Record New Pitch</string>
    <string name="upload">Upload</string>
    <string name="record_later">Record later</string>
    <string name="talnet_profile">Talent Profile</string>
    <string name="profile_title">Profile</string>
    <string name="activate_message">Your profile will not be visible and will not be able to apply for jobs or send messages</string>
    <string name="any_">Any</string>
    <string name="no_contact_details">No contact details supplied</string>
    <string name="connect">Connect</string>
    <string name="connect_help">Hit connect to view full talent detail and CV (if available). Talent will be added to your connection list where you can shortlist them, and start messaging.\n(1 credit/connection)</string>
    <string name="connect_talnet_message">Are you sure you want to connect this talent?</string>
    <string name="connect_application_message">Are you sure you want to connect this application?</string>
    <string name="talnet_remove_message">Are you sure you want to connect this talent?</string>
    <string name="application_remove_message">Are you sure you want to connect this application?</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="active">Active</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="public_">Public</string>
    <string name="telephone_optional">Telephone (optional)</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="age_optional">Age (optional)</string>
    <string name="sex_optional">Sex (optional)</string>
    <string name="nationality_optional">Nationality (optional)</string>
    <string name="national_number">National insurance number</string>
    <string name="optional">(optional)</string>
    <string name="cv_summary">CV summary</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="view_cv">View CV</string>
    <string name="remove_cv">Remove CV</string>
    <string name="upload_cv">Upload CV</string>
    <string name="video_pitch_">Video Pitch:</string>
    <string name="record_desk">Record your up to 30 sec selfie video. The key is to just be yourself! You can record on your phone pretty much anywhere, at home on the bus or in a coffee shop it doesn’t matter, and you can re-record as many times as you want.</string>
    <string name="check_out_our_">Check out our </string>
    <string name="example_video">example video</string>
    <string name="record_new">Record New</string>
    <string name="play_current">Play Current</string>
    <string name="ref_available">References Available</string>
    <string name="ticking_text">By ticking this box I confirm that all information given is true, I understand that any falsification may lead to dismissal, and that I am entitled to work in UK &amp; Northern Ireland.
If required I will give full details if I have been convicted of any criminal offence.</string>
    <string name="video_pitch">Video Pitch</string>
    <string name="overview_">Overview:</string>
    <string name="national_insurance">National Insurance number supplied</string>
    <string name="ref_available_request">Reference available on request</string>
    <string name="contact_">Contact:</string>
    <string name="shortlisted">Shortlisted</string>
    <string name="sectors">Sectors</string>
    <string name="contact">Contact</string>
    <string name="hours">Hours</string>
    <string name="job_match_area">Job match area</string>
    <string name="job_match_area_desc">In order to match you with jobs in your area, you must tell us your location, and specify the maximum distance to search.</string>
    <string name="businesse_title">Businesse</string>
    <string name="workplace_title">Workplace</string>
    <string name="describe_workplace">Describe your workplace</string>
    <string name="match_area">Match area</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="set_my_location">Set My Location</string>
    <string name="job_title">Job</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="birthday">Birthday</string>
</resources>