<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TalentProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_view"
                    app:layout_widthPercent="30%"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/avatar"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:theme="@style/ProgressBar"
                    android:visibility="gone"
                    style="@android:style/Widget.DeviceDefault.ProgressBar.Small"/>
            </android.support.percent.PercentFrameLayout>

            <Button
                android:id="@+id/avata_add_button"
                android:text="@string/change_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:textColor="@color/colorGreen"
                android:theme="@style/Button"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="phone"
                android:hint="@string/telephone_optional"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/sex_optional"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:hint="@string/birthday"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:hint="@string/nationality_optional"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/national_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/national_number"
                    app:met_primaryColor="@color/colorGreen"/>
                <ImageButton
                    android:id="@+id/national_number_help"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/icon_help"/>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:hint="@string/businesse_title"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:hint="@string/job_title"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <Button
                android:id="@+id/save_button"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_green"
                android:theme="@style/Button"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>



