<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/workplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:hint="@string/workplace_title"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:hint="@string/title"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:hint="@string/description"
                app:met_maxCharacters="1000"
                app:met_primaryColor="@color/colorGreen"/>

            <Button
                android:id="@+id/save_button"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_green"
                android:theme="@style/Button"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>