<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myjobpitch.fragments.LocationEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/location_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/name"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/location_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:hint="@string/describe_workplace"
                android:maxLength="10000"
                app:met_maxCharacters="10000"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <TextView
                android:text="@string/public_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:theme="@style/GreyLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/location_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:hint="@string/email"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorGreen"/>
                <ImageButton
                    android:id="@+id/location_email_help"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/icon_help"/>
                <CheckBox
                    android:id="@+id/location_email_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:theme="@style/CheckBox" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:gravity="bottom">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/location_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:hint="@string/phone_optional"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorGreen"/>
                <CheckBox
                    android:id="@+id/location_phone_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:theme="@style/CheckBox" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/match_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/BoldLabel" />
                <ImageButton
                    android:id="@+id/address_help"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_help"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/location_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorGreen"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/location_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/city"
                        app:met_floatingLabel="normal"
                        app:met_primaryColor="@color/colorGreen"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/location_region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/region"
                        app:met_floatingLabel="normal"
                        app:met_primaryColor="@color/colorGreen"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/location_postcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/postcode"
                        app:met_floatingLabel="normal"
                        app:met_primaryColor="@color/colorGreen"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/location_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/country"
                        app:met_floatingLabel="normal"
                        app:met_primaryColor="@color/colorGreen"/>
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_yellow"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/icon_location"
                    android:scaleType="centerCrop"/>
                <Button
                    android:text="@string/set_my_location"
                    android:id="@+id/location_address_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:textColor="@color/white"
                    android:background="@color/transparent"/>
            </FrameLayout>

            <include
                android:id="@+id/location_logo"
                layout="@layout/view_image_selector"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/location_save"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_green"
                android:theme="@style/Button"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>