<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myjobpitch.fragments.ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="#fff">

            <TextView
                android:id="@+id/user_email"
                android:text="namehere@gmail.com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textSize="14sp"
                android:textColor="@color/greyLabel"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/new_password"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/confirm_password"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorGreen"/>

            <Button
                android:id="@+id/change_password"
                android:text="@string/change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_yellow"
                android:theme="@style/Button"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>

